[gd_scene load_steps=19 format=2]

[ext_resource path="res://Menu/UI_Theme.tres" type="Theme" id=1]
[ext_resource path="res://Menu/quitButtonPressed.png" type="Texture" id=2]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://Enemies/skeleton.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Tiles.tres" type="TileSet" id=5]
[ext_resource path="res://Menu/quitButtonDefault.png" type="Texture" id=6]
[ext_resource path="res://Menu/startButtonDefault.png" type="Texture" id=7]
[ext_resource path="res://Menu/quitButtonHover.png" type="Texture" id=8]
[ext_resource path="res://Menu/optionsButtonDefault.png" type="Texture" id=9]
[ext_resource path="res://Menu/optionsButtonHover.png" type="Texture" id=10]
[ext_resource path="res://Menu/startButtonHover.png" type="Texture" id=11]
[ext_resource path="res://Menu/optionsButtonPressed.png" type="Texture" id=12]
[ext_resource path="res://Menu/startButtonPressed.png" type="Texture" id=13]
[ext_resource path="res://Tools/Sword.tscn" type="PackedScene" id=14]
[ext_resource path="res://Tools/Club.tscn" type="PackedScene" id=15]
[ext_resource path="res://Menu/Titles/Title.png" type="Texture" id=16]
[ext_resource path="res://Menu/OptionsMenu.tscn" type="PackedScene" id=17]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="Menu" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0

[node name="Buffer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 344.0
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Buffer"]
margin_right = 1240.0
margin_bottom = 344.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="OptionsMenu" parent="MarginContainer/VBoxContainer/Buffer/MarginContainer" instance=ExtResource( 17 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1220.0
margin_bottom = 324.0
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 348.0
margin_right = 1240.0
margin_bottom = 503.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45
theme = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer"]
margin_right = 1240.0
margin_bottom = 155.0
texture = ExtResource( 16 )
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 507.0
margin_right = 1240.0
margin_bottom = 680.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Buffer 1" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 174.0
margin_bottom = 173.0
size_flags_horizontal = 3

[node name="OptionsButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 178.0
margin_right = 353.0
margin_bottom = 173.0
focus_neighbour_left = NodePath("../QuitButton")
size_flags_horizontal = 3
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 10 )
texture_focused = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="StartButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 357.0
margin_right = 882.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 11 )
texture_focused = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="QuitButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 886.0
margin_right = 1061.0
margin_bottom = 173.0
focus_neighbour_right = NodePath("../OptionsButton")
size_flags_horizontal = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Buffer 2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1065.0
margin_right = 1240.0
margin_bottom = 173.0
size_flags_horizontal = 3

[node name="NPCBoxes" type="Node2D" parent="."]
position = Vector2( 448, 40 )
scale = Vector2( 3, 3 )

[node name="World1" type="Node2D" parent="NPCBoxes"]
position = Vector2( 24, -2.66667 )
__meta__ = {
"_edit_group_": true
}

[node name="Floor" type="TileMap" parent="NPCBoxes/World1"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 65537, 131076, 3, 0, 196608, 3, 0, 196609, 3, 65536, 196610, 3, 0, 196611, 3, 1, 196612, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 65536, 262147, 3, 0, 262148, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0 )

[node name="Wall" type="TileMap" parent="NPCBoxes/World1"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 1, 196613, 1, 1, 262145, 2, 1, 262145, 3, 1, 262145, 4, 1, 196612, 65536, 1, 131077, 65537, 1, 327681, 65538, 1, 327681, 65539, 1, 327681, 65540, 1, 131076, 131072, 1, 65537, 131076, 1, 65536, 196608, 1, 65537, 196612, 1, 65536, 262144, 1, 65541, 262145, 1, 262145, 262146, 1, 262145, 262147, 1, 262145, 262148, 1, 65540, 327680, 1, 327680, 327681, 1, 327681, 327682, 1, 327681, 327683, 1, 327681, 327684, 1, 196611 )

[node name="Skeleton" parent="NPCBoxes/World1" instance=ExtResource( 4 )]
position = Vector2( 40, 48 )

[node name="World2" type="Node2D" parent="NPCBoxes"]
position = Vector2( -106.667, -2.66667 )
__meta__ = {
"_edit_group_": true
}

[node name="Floor" type="TileMap" parent="NPCBoxes/World2"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 65537, 131076, 3, 0, 196608, 3, 0, 196609, 3, 65536, 196610, 3, 0, 196611, 3, 1, 196612, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 65536, 262147, 3, 0, 262148, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0 )

[node name="Wall" type="TileMap" parent="NPCBoxes/World2"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 1, 196613, 1, 1, 262145, 2, 1, 262145, 3, 1, 262145, 4, 1, 196612, 65536, 1, 131077, 65537, 1, 327681, 65538, 1, 327681, 65539, 1, 327681, 65540, 1, 131076, 131072, 1, 65537, 131076, 1, 65536, 196608, 1, 65537, 196612, 1, 65536, 262144, 1, 65541, 262145, 1, 262145, 262146, 1, 262145, 262147, 1, 262145, 262148, 1, 65540, 327680, 1, 327680, 327681, 1, 327681, 327682, 1, 327681, 327683, 1, 327681, 327684, 1, 196611 )

[node name="Skeleton" parent="NPCBoxes/World2" instance=ExtResource( 4 )]
position = Vector2( 40, 48 )
WEAPON = ExtResource( 14 )

[node name="World3" type="Node2D" parent="NPCBoxes"]
position = Vector2( 154.667, -2.66667 )
__meta__ = {
"_edit_group_": true
}

[node name="Floor" type="TileMap" parent="NPCBoxes/World3"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 65537, 131076, 3, 0, 196608, 3, 0, 196609, 3, 65536, 196610, 3, 0, 196611, 3, 1, 196612, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 65536, 262147, 3, 0, 262148, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0 )

[node name="Wall" type="TileMap" parent="NPCBoxes/World3"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 1, 196613, 1, 1, 262145, 2, 1, 262145, 3, 1, 262145, 4, 1, 196612, 65536, 1, 131077, 65537, 1, 327681, 65538, 1, 327681, 65539, 1, 327681, 65540, 1, 131076, 131072, 1, 65537, 131076, 1, 65536, 196608, 1, 65537, 196612, 1, 65536, 262144, 1, 65541, 262145, 1, 262145, 262146, 1, 262145, 262147, 1, 262145, 262148, 1, 65540, 327680, 1, 327680, 327681, 1, 327681, 327682, 1, 327681, 327683, 1, 327681, 327684, 1, 196611 )

[node name="Skeleton" parent="NPCBoxes/World3" instance=ExtResource( 4 )]
position = Vector2( 40, 48 )
WEAPON = ExtResource( 15 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
